--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.datasource.url= jdbc:mysql://localhost:3306/lungidb?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.url= jdbc:mysql://lungidb.cc7lpuspzx5m.ap-south-1.rds.amazonaws.com:3306/lungidb?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url= jdbc:mysql://lungidb.cc7lpuspzx5m.ap-south-1.rds.amazonaws.com:3306/lungidb
 #spring.datasource.username= root
-spring.datasource.username= root
+spring.datasource.username= admin
 spring.datasource.password= qweasdzxc
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
